--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
             align-items: center;
             height: 100vh;
             background-color: #f5f5f5;
+            margin: 0;
         }
         canvas {
             border: 1px solid black;
             background-color: white;
         }
     </style>
+    
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <meta charset="UTF-8">
