--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cancer Out Game</title>
     <style>
         body {
             display: flex;
@@ -15,12 +18,9 @@
             background-color: white;
         }
     </style>
-    
-    
+    <!-- Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cancer Out Game</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.sound/0.3.12/p5.sound.min.js"></script>
 </head>
 <body>
     <script src="game.js"></script>
